--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="/images/leegal-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#EA2024" />
+  <meta name="theme-color" content="#EA580C" />
   <meta name="description" content="Business Formation Partner" />
   <link rel="apple-touch-icon" href="/images/leegal-favicon.png" />
 
