--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/images/leegal-favicon.png" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#EA580C" />
   <meta name="description" content="Business Formation Partner" />
-  <link rel="apple-touch-icon" href="/images/leegal-favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -26,7 +26,7 @@
   <meta property="og:title" content="Leegal" />
   <meta property="og:description"
     content="Leegal delivers innovative solutions in Business Formation and branding. Empowering businesses with high-quality digital solutions that drive growth and success." />
-  <meta property="og:image" content="/images/leegal-favicon.png" />
+  <meta property="og:image" content="/favicon.ico" />
   <meta property="og:url" content="http://leegal.co/" />
   <meta property="og:type" content="website" />
 
