--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/public/favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#EA580C" />
   <meta name="description" content="Business Formation Partner" />
-  <link rel="apple-touch-icon" href="/public/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
